Fix contrast

--- a/src/assets/sass/base/global.scss
+++ b/src/assets/sass/base/global.scss
@@ -36,7 +36,7 @@ body {
     width: 100%;
     height: 100%;
     filter: blur(5px);
-    transition: opacity .3s cubic-bezier(.79,0,.07,.88) .3s;
+    transition: opacity .5s cubic-bezier(.79,0,.07,.88);
     z-index: 1
   }
   
@@ -45,7 +45,7 @@ body {
   }
   
   .blur-load picture img {
-    transition: opacity .3s cubic-bezier(.79,0,.07,.88);
+    transition: opacity .5s cubic-bezier(.79,0,.07,.88);
     opacity: 0
   }
   
@@ -60,7 +60,7 @@ body {
 
   a:focus-visible,
   button:focus-visible {
-    outline: 2px dotted var(--color-accent-1);
+    outline: 4px dashed var(--color-accent-1);
   }
 
   .link {
