--- a/src/assets/sass/components/blog.scss
+++ b/src/assets/sass/components/blog.scss
@@ -1,7 +1,7 @@
 
 .category-card {
     position: relative;
-    padding: 1em 1.2em;
+    padding: .8em 1.2em;
     margin-bottom: 1em;
     background-color: var(--color-light-1);
     border: 2px solid var(--color-dark-1);
